<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<!-- date toolbar -->
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingTop="6dp"
		android:paddingBottom="6dp"
		android:paddingLeft="30dp"
		android:background="#212442"
		android:paddingRight="30dp">
		<!-- prev button -->
		<ImageView
			android:id="@+id/calendar_prev_button"
			android:layout_width="30dp"
			android:layout_height="30dp"
			android:layout_centerVertical="true"
			android:layout_alignParentLeft="true"
			android:src="@drawable/ic_action_left"/>
		   <!-- date title -->
		  <TextView
			android:id="@+id/calendar_date_display"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerVertical="true"
			android:layout_toRightOf="@+id/calendar_prev_button"
			android:layout_toLeftOf="@+id/calendar_next_button"
			android:gravity="center"
			  android:textSize="@dimen/text_size_NORMAL"
			android:textAppearance="@android:style/TextAppearance.Medium"
			android:textColor="@color/white_color"
			android:fontFamily="@string/fontFamily__roboto_light"
			android:text="current date"
			  android:textStyle="bold"/>

		   <!-- next button -->
		   <ImageView
			android:id="@+id/calendar_next_button"
			android:layout_width="30dp"
			android:layout_height="30dp"
			android:layout_centerVertical="true"
			android:layout_alignParentRight="true"
			android:src="@drawable/ic_action_right"/>
	     </RelativeLayout>

	     <!-- days header -->
	    <LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:background="#f3f3f3">
	   <LinearLayout
		android:id="@+id/calendar_header"
		android:layout_width="match_parent"
		android:layout_height="40dp"
		android:gravity="center_vertical"
		   android:background="#212442"
		   android:layout_marginTop="4dp"
		android:orientation="horizontal">

		<TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="center_horizontal"
			android:textColor="@color/white_color"
			android:fontFamily="@string/fontFamily__roboto_light"
			android:text="@string/text_day_sun"
			android:textStyle="bold"/>

		<TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="center_horizontal"
			android:textColor="@color/white_color"
			android:fontFamily="@string/fontFamily__roboto_light"
			android:text="@string/text_day_mon"
			android:textStyle="bold"/>

		<TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="center_horizontal"
			android:textColor="@color/white_color"
			android:fontFamily="@string/fontFamily__roboto_light"
			android:text="@string/text_day_tue"
			android:textStyle="bold"/>

		<TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="center_horizontal"
			android:textColor="@color/white_color"
			android:fontFamily="@string/fontFamily__roboto_light"
			android:text="@string/text_day_wed"
			android:textStyle="bold"/>

		   <TextView
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:gravity="center_horizontal"
              android:textColor="@color/white_color"
               android:fontFamily="@string/fontFamily__roboto_light"
               android:text="@string/text_day_thu"
			   android:id="@+id/textView11"
			   android:textStyle="bold"/>

		   <TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="center_horizontal"
			android:textColor="@color/white_color"
			  android:fontFamily="@string/fontFamily__roboto_light"
			  android:text="@string/text_day_fri"
			   android:textStyle="bold"/>

		<TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="center_horizontal"
			android:textColor="@color/white_color"
			android:fontFamily="@string/fontFamily__roboto_light"
			android:text="@string/text_day_sat"
			android:textStyle="bold"/>
	</LinearLayout>

	<!-- days view -->
	<GridView
		android:id="@+id/calendar_grid"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center"

		android:numColumns="7"
		android:stretchMode="columnWidth"
	 />
	</LinearLayout>
	</LinearLayout>
</LinearLayout>