<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 android:layout_width="match_parent"
android:layout_height="wrap_content"
    android:weightSum="24"
    android:background="#3b4163"
    android:orientation="horizontal"
android:layout_alignParentBottom="true">
<!--<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="24"
    android:background="#3b4163"
    android:orientation="horizontal">-->


    <Button
        android:id="@+id/btn_leave_app"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:background="#00000000"
        android:paddingTop="4dp"
        android:drawableTop="@drawable/sample_icon"
        android:text="@string/leave_application"
        android:textColor="@color/white_color"
        android:layout_marginLeft="8dp"
        android:textSize="11dp"
        android:textAllCaps="false"
        android:paddingBottom="4dp"/>
    <Button
        android:id="@+id/btn_attd_reg"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:background="#00000000"
        android:paddingTop="4dp"
        android:drawableTop="@drawable/sample_icon"
        android:text="@string/attendance_regularization"
        android:textColor="@color/white_color"
        android:textSize="11dp"
        android:textAllCaps="false"
        android:paddingBottom="4dp"/>

    <Button
        android:id="@+id/btn_out_duty"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:paddingTop="4dp"
        android:background="#00000000"
        android:drawableTop="@drawable/sample_icon"
        android:text="@string/out_duty_application"
        android:textColor="@color/white_color"
        android:textSize="11dp"
        android:textAllCaps="false"
        android:paddingBottom="4dp"/>

    <Button
        android:id="@+id/btn_comp_off"
        android:layout_width="0dp"
        android:background="#00000000"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:paddingTop="4dp"
        android:drawableTop="@drawable/sample_icon"
        android:text="@string/compoff_application"
        android:textColor="@color/white_color"
        android:textSize="11dp"
        android:textAllCaps="false"
        android:paddingBottom="4dp"/>

</LinearLayout>
<!--
</LinearLayout>-->
