<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true">

   <!-- divider......-->



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="13"
       android:background="#4a4d6b"
        android:orientation="horizontal">
     <!--   android:background="#3b4163"-->


        <Button
            android:id="@+id/btn_leave_app"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:background="#00000000"
            android:text="@string/leave_application"
            android:textColor="@color/white_color"
           android:layout_marginLeft="8dp"
            android:textSize="11dp"
            android:textAllCaps="false"
            android:onClick="footer_leave_application"/>

        <View
            android:layout_height="match_parent"
            android:layout_width="0.25dp"
            android:background="#fff"
            />




        <Button
            android:id="@+id/btn_attd_reg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
         android:layout_weight="6"
            android:background="#00000000"
            android:text="@string/attendance_regularization"
            android:textColor="@color/white_color"
            android:textSize="11dp"
            android:textAllCaps="false"
            android:onClick="footer_attend_reg"
          />
        <View
            android:layout_height="match_parent"
            android:layout_width="0.25dp"
            android:background="#fff"
            />


        <Button
            android:id="@+id/btn_out_duty"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:background="#00000000"
            android:text="@string/out_duty_application"
            android:textColor="@color/white_color"
            android:textSize="11dp"
            android:textAllCaps="false"
            android:onClick="footer_out_duty"
          />
        <View
            android:layout_height="match_parent"
            android:layout_width="0.25dp"
            android:background="#fff"
            />



        <Button
            android:id="@+id/btn_comp_off"
            android:layout_width="fill_parent"
            android:background="#00000000"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:text="@string/compoff_application"
            android:textColor="@color/white_color"
            android:textSize="11dp"
            android:textAllCaps="false"
            android:onClick="footer_comp_off"
          />

     </LinearLayout>
</LinearLayout>