<?xml version="1.0" encoding="utf-8"?>

   <!-- <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
        android:background="@color/background_app"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginRight="@dimen/margin_right"
         android:id="@+id/scrol"
         android:layout_gravity="center"
        android:fillViewport="true">-->


    <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:focusable="true"
        android:focusableInTouchMode="true"


        android:orientation="vertical"

        >


        <!--...................-->

        <!--for spinner first row-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/leavecode"
            android:focusable="true"
            android:layout_marginTop="0dp"
            android:focusableInTouchMode="true"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-2dp"
                android:layout_marginTop="20dp"
                android:focusable="true"
                android:focusableInTouchMode="true"

                android:fontFamily="@string/fontFamily__roboto_light"
                android:text="@string/leave_app_leavetype"
                android:textSize="@dimen/Text_size_normal_device_leavetype" />


            <Spinner
                android:id="@+id/leave_type_spineer"
                style="@style/My.Spinner.Style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="75dp"
                android:layout_marginTop="15dp">

            </Spinner>


        </LinearLayout>
        <!--   ........-->

        <!-- For Radio Button-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:padding="6dp">


            <RadioGroup
                android:id="@+id/radiogp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-5dp"
                android:layout_marginTop="2dp"
                android:fontFamily="@string/fontFamily__roboto_light"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_fullday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:buttonTint="@color/text_color_hint"
                    android:fontFamily="@string/fontFamily__roboto_light"
                    android:text="@string/leave_app_fullday"
                    android:textSize="@dimen/Text_size_normal_device_leavetype" />


                <RadioButton
                    android:id="@+id/radio_firsthalf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:buttonTint="@color/text_color_hint"
                    android:fontFamily="@string/fontFamily__roboto_light"
                    android:text="@string/leave_app_firsthalf"
                    android:textSize="@dimen/Text_size_normal_device_leavetype" />

                <RadioButton
                    android:id="@+id/radio_secondhalf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:buttonTint="@color/text_color_hint"
                    android:fontFamily="@string/fontFamily__roboto_light"
                    android:text="@string/leave_app_secondhalf"
                    android:textSize="@dimen/Text_size_normal_device_leavetype" />


            </RadioGroup>
        </LinearLayout>

        <!--.............-->

        <!--.....For From Date.....-->

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_floatfrom_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/text_color_hint">


            <EditText
                android:id="@+id/editText_from_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="6dp"
                android:drawableRight="@drawable/ic_action_calendar"
                android:editable="false"
                android:focusable="true"
                android:fontFamily="@string/fontFamily__roboto_light"
                android:hint="@string/leave_app_fromdate"
                android:inputType="none"
                android:maxLines="1"

                android:textColor="@color/text_color_hint"
                android:textSize="@dimen/Text_size_normal_device_leavetype" />
        </android.support.design.widget.TextInputLayout>


        <!--.............-->

        <!-- To Date.....-->

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_floatto_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColorHint="@color/text_color_hint">

            <EditText
                android:id="@+id/editText_to_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="6dp"
                android:drawableRight="@drawable/ic_action_calendar"
                android:editable="false"
                android:fontFamily="@string/fontFamily__roboto_light"
                android:hint="@string/leave_app_todate"
                android:inputType="none"
                android:maxLines="1"
                android:textColor="@color/text_color_hint"
                android:textSize="@dimen/Text_size_normal_device_leavetype" />


        </android.support.design.widget.TextInputLayout>


        <!-- For Number of days...-->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal"
            android:padding="4dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_float_no_of_days"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/text_color_hint">


                <EditText
                    android:id="@+id/txt_no.of_days"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:drawablePadding="6dp"
                    android:focusable="true"
                    android:fontFamily="@string/fontFamily__roboto_light"
                    android:hint="@string/attd_reg_app_no_of_days"
                    android:inputType="none"
                    android:maxLines="1"
                    android:textColor="@color/text_color_hint"


                    android:textSize="@dimen/Text_size_normal_device_leavetype" />
            </android.support.design.widget.TextInputLayout>




        </LinearLayout>

        <!-- ..............................-->


        <!-- ..................-->

        <!--   For Reason...-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="left"
                android:padding="4dp"

                android:text="Reason"
                android:textSize="@dimen/text_size_16" />
            <Spinner
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"

                style="@style/My.Spinner.Style"
                android:textSize="@dimen/text_size_NORMAL"
                android:id="@+id/_reason">

            </Spinner>

        </LinearLayout>



        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_floatto_reason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:textColorHint="@color/text_color_hint">


            <EditText
                android:id="@+id/editText_to_reason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@string/fontFamily__roboto_light"
                android:hint="Reason Description"
                android:drawablePadding="6dp"
                android:inputType="textNoSuggestions"

                android:textColor="@color/text_color_hint"
                android:textSize="@dimen/Text_size_normal_device_leavetype" />
        </android.support.design.widget.TextInputLayout>



        <!-- ...................-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:fontFamily="@string/fontFamily__roboto_light"
        android:padding="6dp"
        android:text="@string/app_approverhirearchy"
        android:textColor="@color/approver_hirarchy_color"
        android:textSize="@dimen/Text_size_normal_device" />

        <!--<android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="60dp">-->


        <!--<TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_approverhirearchy"
            android:textSize="@dimen/text_size_16"
            android:layout_marginLeft="10dp"
            android:fontFamily="@string/fontFamily__roboto_light"
            android:textColor="@color/approver_hirarchy_color"/>-->




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:weightSum="4"

            android:id="@+id/linearout1"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"

                android:id="@+id/linearout"
                >

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:id="@+id/img1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/arrow1"
                    />
            </LinearLayout>





            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:id="@+id/linearout2"
                >

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:id="@+id/img2">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/arrow2"
                    />
            </LinearLayout>





            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:id="@+id/linearout3"
                >

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:id="@+id/img3">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/arrow3"
                    />
            </LinearLayout>





            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:id="@+id/linearout4"
                >

            </LinearLayout>


        </LinearLayout>
   <!-- <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
-->

    </LinearLayout>


<!--
</ScrollView>
-->

